[build-system]
requires = ["setuptools>=45.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "swmmEnv"
version = "0.2.0"
description = "Multi-agent reinforcement learning environment for SWMM stormwater simulation"
readme = "README.md"
license = "MIT"
authors = [
    {name = "dujddx", email = "dujddx@163.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pyswmm>=2.1.0",
    "pettingzoo>=1.24.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
marl = [
    "marllib",
    "ray[rllib]>=2.0",
]

[project.urls]
Homepage = "https://github.com/DujDDx/swmmEnv"
Documentation = "https://github.com/DujDDx/swmmEnv#readme"
Repository = "https://github.com/DujDDx/swmmEnv.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["swmmEnv*"]
